--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -1,11 +1,17 @@
 * {
-  margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
+  margin: 0;
+  font-family: 'Roboto', Helvetica;
   letter-spacing: 1px;
+  color: #555;
+  position: relative;
+  box-sizing: border-box;
+  outline: none;
 }
 
 html,body {
+  margin: 0;
+  padding: 0;
   width: 100%;
   height: 100%;
 }
