--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -16,6 +16,14 @@ html,body {
   height: 100%;
 }
 
+body {
+  transition: all 0.4s;
+}
+
+body.hasheader {
+  padding-top: 36px;
+}
+
 #cover {
   position: fixed;
   z-index: 100;
@@ -39,4 +47,91 @@ html,body {
   font-family: Helvetica;
   font-size: small;
 }
+
+#header {
+  z-index: 90;
+  position: fixed;
+  width: 100%;
+  height: 0;
+  top: 0;
+  left: 0;
+  font-size: medium;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  background-image: -moz-linear-gradient(top, #fefefe 0%, #fefefe 50%, #fafafa);
+  background-image: -webkit-linear-gradient(top, #fefefe 0%, #fefefe 50%, #fafafa);
+  box-shadow: 0px 2px 8px rgba(0,0,0,0.2);
+}
+
+#header a {
+  font-size: 16px;
+  color: #888;
+  text-decoration: none;
+}
+
+#header.visible {
+  height: 36px;
+  line-height: 36px;
+}
+
+.header-left-icon {
+  width: 24px;
+  height: 24px;
+  line-height: 28px;
+  text-align: center;
+  border-radius: 50%;
+  margin: 6px;
+  margin-left: 12px;
+  border: 2px solid #999;
+}
+
+.header-left-icon i {
+  color: #999;
+  font-size: 18px;
+}
+
+#header a,
+.header-left-icon,
+.header-left-icon i {
+  transition: all 0.2s;
+}
+
+.header-left-icon:hover {
+  border: 2px solid #469;
+}
+
+.header-left-icon:hover i,
+#header a:hover {
+  color: #469;
+}
+
+.header-center {
+  color: #888;
+  text-align: center;
+}
+
+.header-right {
+  display: grid;
+  grid-template-columns: 1fr 72px 8px;
+}
+
+#social-icons {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.social-icon {
+  width: 28px;
+  height: 28px;
+  margin: 4px;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/* Thanks to: https://www.iconfinder.com/icons/107175/circle_color_facebook_icon */
+.social-icon.fb {background-image: url('../../assets/img/social_icon_fb.png');}
+
+/* Thanks to: https://www.iconfinder.com/icons/107170/circle_color_twitter_icon */
+.social-icon.tw {background-image: url('../../assets/img/social_icon_tw.png');}
 
