--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -58,7 +58,7 @@ body.hasheader {
   left: 0;
   font-size: medium;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 80px 1fr 80px;
   background-image: -moz-linear-gradient(top, #fefefe 0%, #fefefe 50%, #fafafa);
   background-image: -webkit-linear-gradient(top, #fefefe 0%, #fefefe 50%, #fafafa);
   box-shadow: 0px 2px 8px rgba(0,0,0,0.2);
