Add article block

--- a/viz/jpycoins/css/style.scss
+++ b/viz/jpycoins/css/style.scss
@@ -105,6 +105,20 @@ body {
       }
     }
   }
+  
+  #article-block {
+    padding: 0 8px;
+
+    * {
+      font-weight: lighter;
+    }
+
+    p {
+      font-size: 0.9rem;
+      line-height: 1.4rem;
+      margin-bottom: 16px;
+    }
+  }
 }
 
 
