--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -53,30 +53,23 @@ body {
       height: 36px;
       margin-top: 24px;
       
-      i {
+      a {
+        display: block;
         position: absolute;
         display: block;
         top: 0;
-        font-size: 28px;
-        color: #999;
+        left: 0;
         border-radius: 24px;
-        
+
         &:hover {
           cursor: pointer;
           opacity: 0.7;
         }
-
-        a {
-          position: absolute;
-          width: 100%;
-          height: 100%;
-          left: 0;
-          text-decoration: none;
+        
+        &#link-menu {
+          left: auto;
+          right: 0;
         }
-      }
-
-      #icon-menu {
-        right: 0;
       }
     }
 
@@ -149,6 +142,7 @@ body {
           height: 64px;
           
           #icon-close {
+            position: absolute;
             right: 16px;
             top: 16px;
           }
