--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,19 +40,26 @@ body {
       width: 100%;
       height: 36px;
       margin-top: 24px; }
-      body #container #icons-block a {
+      body #container #icons-block i {
         display: block;
         position: absolute;
-        display: block;
         top: 0;
         left: 0;
-        border-radius: 24px; }
-        body #container #icons-block a:hover {
+        border-radius: 24px;
+        z-index: 10; }
+        body #container #icons-block i:hover {
           cursor: pointer;
           opacity: 0.7; }
-        body #container #icons-block a#link-menu {
-          left: auto;
-          right: 0; }
+      body #container #icons-block a {
+        position: absolute;
+        display: block;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0; }
+      body #container #icons-block #icon-menu {
+        right: 0;
+        left: auto; }
     body #container #title-block {
       margin-top: 16px;
       margin-bottom: 48px;
@@ -72,9 +79,9 @@ body {
       height: 100%;
       top: 0;
       left: 0;
-      z-index: -1;
       background-color: rgba(0, 0, 0, 0.7);
-      opacity: 0; }
+      opacity: 0;
+      z-index: -1; }
     body #container #menu #menu-content {
       position: fixed;
       width: 190px;
@@ -82,7 +89,7 @@ body {
       top: 0;
       right: -200px;
       background-color: #fefefe;
-      z-index: 20;
+      z-index: 100;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4); }
       body #container #menu #menu-content .item {
         width: 100%;
@@ -102,14 +109,14 @@ body {
           body #container #menu #menu-content .item a:hover {
             opacity: 0.7; }
       body #container #menu #menu-content .item:first-child {
-        height: 64px; }
+        height: 72px; }
         body #container #menu #menu-content .item:first-child #icon-close {
-          position: absolute;
-          right: 16px;
-          top: 16px; }
+          right: 24px;
+          left: auto;
+          top: 24px; }
     body #container #menu.show #menu-cover {
       opacity: 1;
-      z-index: 10; }
+      z-index: 90; }
     body #container #menu.show #menu-content {
       right: 0; }
     body #container #works-block {
