--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,9 +181,13 @@ body {
       font-size: 0.8rem; }
     body.work-description #container #title-block h1 {
       font-size: 1.6rem; }
-  body.work-description #container #eyecatch {
+  body.work-description #container #eyecatch-block {
+    overflow-x: hidden;
     margin-left: calc(((100vw - 100%) / 2) * -1);
     width: 100vw; }
+    body.work-description #container #eyecatch-block #eyecatch {
+      margin-left: -15%;
+      width: 130%; }
   body.work-description #container #article-block {
     margin-top: 24px; }
     body.work-description #container #article-block p {
@@ -217,7 +221,7 @@ body {
     body.work-description #container #title-block h1 {
       font-size: 1.6rem;
       font-weight: normal; }
-    body.work-description #container #eyecatch {
+    body.work-description #container #eyecatch-block #eyecatch {
       margin-left: 0;
       width: 100%; } }
 /* PC */
@@ -229,6 +233,9 @@ body {
 
   body.work-description #container #title-block h1 {
     font-size: 2.0rem;
-    font-weight: normal; } }
+    font-weight: normal; }
+  body.work-description #container #eyecatch-block {
+    margin-left: 0;
+    width: 100%; } }
 
 /*# sourceMappingURL=style.css.map */
