--- a/assets/css/default.scss
+++ b/assets/css/default.scss
@@ -93,7 +93,7 @@ body.hasheader {
 .header-left-icon i {
   transition: all 0.2s;
 }
-
+zWnD6rQR7PxmEp_h-2ZX
 .header-left-icon:hover i,
 #header a:hover {
   color: #469;
