--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,7 +126,6 @@ body {
         margin: 0 auto;
         margin-bottom: 24px;
         width: calc(100% - 80px);
-        height: 234px;
         border-radius: 2px;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
         background-color: #fefefe; }
@@ -139,7 +138,7 @@ body {
           background-repeat: no-repeat;
           background-size: cover; }
         body #container #works-block .work .title {
-          padding: 8px 8px 0 8px;
+          padding: 8px;
           font-size: 0.9rem;
           line-height: 1.2rem; }
         body #container #works-block .work a {
@@ -210,7 +209,7 @@ body {
     margin-bottom: 48px; }
 
 /* Tablet */
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 600px) {
   body #container #works-block .work {
     width: calc((100% / 2) - 40px); }
     body #container #works-block .work .title {
@@ -225,7 +224,7 @@ body {
       margin-left: 0;
       width: 100%; } }
 /* PC */
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 900px) {
   body #container #works-block .work {
     width: calc((100% / 3) - 20px); }
     body #container #works-block .work .title {
