--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,9 +152,9 @@ body {
         margin-bottom: 36px; }
         body #container #about-block section .gray {
           color: #999; }
-        body #container #about-block section .bold {
+        body #container #about-block section .strong {
           font-weight: 400;
-          color: #369; }
+          color: #432; }
         body #container #about-block section .subsection {
           margin-bottom: 16px; }
           body #container #about-block section .subsection p, body #container #about-block section .subsection h4 {
