--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -217,9 +217,9 @@ body {
           color: #999;
         }
         
-        .bold {
+        .strong {
           font-weight: 400;
-          color: #369;
+          color: #432;
         }
         
         .subsection {
