--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,7 +5,7 @@
 * {
   padding: 0;
   margin: 0;
-  font-family: "Helvetica Neue", "Helvetica";
+  font-family: "Helvetica Neue", "Helvetica", "Arial";
   font-weight: normal;
   font-size: 1.0rem;
   letter-spacing: 0.04rem;
