--- a/works/teachers/css/style.css
+++ b/works/teachers/css/style.css
@@ -64,14 +64,15 @@ body {
           body #container .viz-wrapper .viz-container .y-label.unit {
             height: 10px;
             line-height: 10px;
-            width: 80px;
+            width: 160px;
             margin-top: 0;
             top: calc(100% + 4px); }
             body #container .viz-wrapper .viz-container .y-label.unit.l {
               left: 0; }
             body #container .viz-wrapper .viz-container .y-label.unit.r {
               right: 0;
-              left: auto; }
+              left: auto;
+              text-align: right; }
           body #container .viz-wrapper .viz-container .y-label.p {
             left: 0;
             width: 100%;
@@ -102,7 +103,7 @@ body {
       body #container #title-block hr {
         border: 1px solid rgba(255, 255, 255, 0.25); }
     body #container #bubble-chart {
-      width: 200vw;
+      width: 220vw;
       height: 846px;
       margin-top: 8px;
       margin-bottom: 8px;
@@ -119,6 +120,8 @@ body {
           font-size: 0.8rem;
           text-align: right;
           padding-right: 8px; }
+          body #container #bubble-chart .row .name.r {
+            text-align: left; }
         body #container #bubble-chart .row .values {
           width: calc(100% - 90px);
           display: flex; }
@@ -289,6 +292,8 @@ body {
     body #container #bubble-chart {
       width: 100%;
       height: 987px; }
+      body #container #bubble-chart .name.r {
+        display: none; }
       body #container #bubble-chart .row {
         height: 21px; }
         body #container #bubble-chart .row .name {
