--- a/works/teachers/css/style.scss
+++ b/works/teachers/css/style.scss
@@ -166,13 +166,9 @@ body {
             box-shadow: 0 1px 2px rgba(0,0,0,0.4);
             transition: all ease 0.2s;
 
-            &.show {
-              $radius: 36px;
-              width: $radius !important;
-              height: $radius !important;
-              margin-top: -6px !important;
-              margin-left: -6px !important;
-              box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+            &.hovered {
+              border: 1px solid #FFFEF2;
+              box-shadow: 0 2px 10px rgba(0, 0, 0, 0.9);
               z-index: 100 !important;
             }
           }
