--- a/works/earthquakes/style.css
+++ b/works/earthquakes/style.css
@@ -11,11 +11,13 @@ body {
 #container {
   margin: 0 auto;
   width: calc(100% - 16px);
-  max-width: 720px;
+  max-width: 900px;
 }
 
 #title-block {
+  margin: 0 auto;
   margin-top: 24px;
+  max-width: 720px;
 }
 
 #title-block h1 {
@@ -29,8 +31,15 @@ body {
   color: rgba(255, 255, 255, 0.7);
 }
 
+#title-block p {
+  margin-top: 16px;
+  font-size: 0.9em;
+}
+
 #description-block {
+  margin: 0 auto;
   margin-top: 36px;
+  max-width: 720px;
 }
 
 #description-block p {
@@ -39,7 +48,9 @@ body {
 }
 
 #controls-block {
+  margin: 0 auto;
   margin-top: 24px;
+  max-width: 720px;
 }
 
 #controls-block select {
@@ -51,7 +62,7 @@ body {
   background-size: 20px;
   background-position: calc(100% - 8px) 65%;
   background-repeat: no-repeat;
-  background-image: url(arrow_down.svg);
+  background-image: url(img/arrow_down.svg);
   font-size: 1.0em;
   height: 26px;
   padding-left: 1px;
