--- a/works/earthquakes/style.scss
+++ b/works/earthquakes/style.scss
@@ -11,11 +11,13 @@ body{
 #container {
   margin: 0 auto;
   width: calc(100% - 16px);
-  max-width: 720px;
+  max-width: 900px;
 }
 
 #title-block {
+  margin: 0 auto;
   margin-top: 24px;
+  max-width: 720px;
 
   h1 {
     font-size: 1.6em;
@@ -27,10 +29,17 @@ body{
     font-size: 1.0em;
     color: rgba(255,255,255,0.7);
   }
+
+  p {
+    margin-top: 16px;
+    font-size: 0.9em;
+  }
 }
 
 #description-block {
+  margin: 0 auto;
   margin-top: 36px;
+  max-width: 720px;
 
   p {
     margin-bottom: 8px;
@@ -39,7 +48,9 @@ body{
 }
 
 #controls-block {
+  margin: 0 auto;
   margin-top: 24px;
+  max-width: 720px;
 
   select {
     margin: 8px 32px;
@@ -50,7 +61,7 @@ body{
     background-size: 20px;
     background-position: calc(100% - 8px) 65%;
     background-repeat: no-repeat;
-    background-image: url(arrow_down.svg);
+    background-image: url(img/arrow_down.svg);
     font-size: 1.0em;
     height: 26px;
     padding-left: 1px;
