--- a/works/viz4socialgood/css/style.css
+++ b/works/viz4socialgood/css/style.css
@@ -11,86 +11,64 @@
   position: relative;
   box-sizing: border-box;
   outline: none;
-  transition: all 0.25s;
-}
+  transition: all 0.25s; }
 
 body {
-  background-color: #0a1e3c;
-}
+  background-color: #0a1e3c; }
 
 #container {
   margin: 0 auto;
-  max-width: 960px;
-  padding: 16px;
-}
+  width: 960px;
+  padding: 16px; }
 
 #header-block a {
   text-decoration: none;
   font-size: 0.8rem;
   line-height: 28px;
-  vertical-align: top;
-}
+  vertical-align: top; }
 
 #title-block {
-  margin-bottom: 24px;
-}
-
-#title-block h1 {
-  color: #fdfdfd;
-  font-size: 1.5em;
-  margin: 16px 0 4px 0.1em;
-}
-
-#title-block h5 {
-  font-size: 1.1em;
-  color: #eee;
-  margin-bottom: 24px;
-}
-
-#title-block p {
-  font-size: 0.9em;
-  margin-bottom: 8px;
-}
+  margin-bottom: 24px; }
+  #title-block h1 {
+    color: #fdfdfd;
+    font-size: 1.5em;
+    margin: 16px 0 4px 0.1em; }
+  #title-block h5 {
+    font-size: 1.1em;
+    color: #eee;
+    margin-bottom: 24px; }
+  #title-block p {
+    font-size: 0.9em;
+    margin-bottom: 8px; }
 
 #canvas-block {
-  width: 100%;
-}
-
-#canvas-block #canvas {
-  height: 1200px;
-}
-
-#canvas-block #canvas #gc-map {
-  position: absolute;
-  width: 90%;
-  height: 50%;
-  top: 0;
-  left: 5%;
-  z-index: 100;
-  opacity: 0.3;
-  pointer-events: none;
-}
+  width: 100%; }
+  #canvas-block #canvas {
+    height: 1440px; }
+    #canvas-block #canvas #gc-map {
+      position: absolute;
+      width: 90%;
+      height: 50%;
+      top: 0;
+      left: 5%;
+      z-index: 100;
+      opacity: 0.3;
+      pointer-events: none; }
 
 #notes-block {
   margin-top: 36px;
-  margin-bottom: 36px;
-}
-
-#notes-block p {
-  font-size: 0.8em;
-  margin-bottom: 8px;
-}
+  margin-bottom: 36px; }
+  #notes-block p {
+    font-size: 0.8em;
+    margin-bottom: 8px; }
 
 /* Tablet */
 @media screen and (min-width: 600px) {
   #canvas-block #canvas {
-    height: 1000px;
-  }
-}
-
+    height: 1000px; } }
 /*  PC */
 @media screen and (min-width: 800px) {
   #canvas-block #canvas {
-    height: 1200px;
-  }
-}
+    height: 1200px; } }
+
+/*# sourceMappingURL=style.css.map */
