--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -296,6 +296,10 @@ body {
             margin-top: 24px;
             margin-bottom: 36px;
           }
+
+          img {
+            width: 100%;
+          }
           
           &.disclaimer {
             text-align: center;
