--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -8,21 +8,17 @@
   color: #555;
   position: relative;
   box-sizing: border-box;
-  outline: none;
-}
+  outline: none; }
 
 html, body {
   width: 100%;
-  height: 100%;
-}
+  height: 100%; }
 
 body {
-  transition: all 0.4s;
-}
+  transition: all 0.4s; }
 
 body.hasheader {
-  padding-top: 36px;
-}
+  padding-top: 36px; }
 
 #cover {
   position: fixed;
@@ -35,8 +31,7 @@ body.hasheader {
   text-align: center;
   color: rgba(0, 0, 0, 0.8);
   vertical-align: middle;
-  line-height: 100%;
-}
+  line-height: 100%; }
 
 #cover p {
   position: fixed;
@@ -45,8 +40,7 @@ body.hasheader {
   transform: translate(-50%, -50%);
   color: rgba(0, 0, 0, 0.8);
   font-family: Helvetica;
-  font-size: small;
-}
+  font-size: small; }
 
 #header {
   z-index: 90;
@@ -60,19 +54,16 @@ body.hasheader {
   grid-template-columns: 80px 1fr 80px;
   background-image: -moz-linear-gradient(top, #fefefe 0%, #fefefe 50%, #fafafa);
   background-image: -webkit-linear-gradient(top, #fefefe 0%, #fefefe 50%, #fafafa);
-  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.2);
-}
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.2); }
 
 #header a {
   font-size: 16px;
   color: #888;
-  text-decoration: none;
-}
+  text-decoration: none; }
 
 #header.visible {
   height: 36px;
-  line-height: 36px;
-}
+  line-height: 36px; }
 
 .header-left-icon {
   width: 26px;
@@ -81,40 +72,33 @@ body.hasheader {
   text-align: center;
   border-radius: 50%;
   margin: 6px;
-  margin-left: 12px;
-}
+  margin-left: 12px; }
 
 .header-left-icon i {
   color: #999;
-  font-size: 26px;
-}
+  font-size: 26px; }
 
 #header a,
 .header-left-icon,
 .header-left-icon i {
-  transition: all 0.2s;
-}
+  transition: all 0.2s; }
 
 zWnD6rQR7PxmEp_h-2ZX
 .header-left-icon:hover i,
 #header a:hover {
-  color: #469;
-}
+  color: #469; }
 
 .header-center {
   color: #888;
-  text-align: center;
-}
+  text-align: center; }
 
 .header-right {
   display: grid;
-  grid-template-columns: 1fr 72px 8px;
-}
+  grid-template-columns: 1fr 72px 8px; }
 
 #social-icons {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-}
+  grid-template-columns: 1fr 1fr; }
 
 .social-icon {
   width: 28px;
@@ -122,24 +106,20 @@ zWnD6rQR7PxmEp_h-2ZX
   margin: 4px;
   background-position: center center;
   background-repeat: no-repeat;
-  background-size: cover;
-}
+  background-size: cover; }
 
 /* Thanks to: https://www.iconfinder.com/icons/107175/circle_color_facebook_icon */
 .social-icon.fb {
-  background-image: url("../../assets/img/social_icon_fb.png");
-}
+  background-image: url("../../assets/img/social_icon_fb.png"); }
 
 /* Thanks to: https://www.iconfinder.com/icons/107170/circle_color_twitter_icon */
 .social-icon.tw {
-  background-image: url("../../assets/img/social_icon_tw.png");
-}
+  background-image: url("../../assets/img/social_icon_tw.png"); }
 
 /* Ripple effect (Thanks to: https://qiita.com/nekoneko-wanwan/items/c9f26ce049bd422e555c) */
 .ripple {
   overflow: hidden;
-  position: relative;
-}
+  position: relative; }
 
 /* エフェクト要素 */
 .ripple_effect {
@@ -150,21 +130,18 @@ zWnD6rQR7PxmEp_h-2ZX
   pointer-events: none;
   transform: scale(0);
   opacity: 0;
-  background: #ccc;
-}
+  background: #ccc; }
 
 /* classが付与されたらアニメーションを実行 */
 .ripple_effect.is-show {
-  animation: ripple 0.75s ease-out;
-}
+  animation: ripple 0.75s ease-out; }
 
 /* アニメーションの定義 */
 @keyframes ripple {
   from {
-    opacity: 1;
-  }
+    opacity: 1; }
   to {
     transform: scale(2);
-    opacity: 0;
-  }
-}
+    opacity: 0; } }
+
+/*# sourceMappingURL=default.css.map */
