--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,13 +2,16 @@
 @import url(https://fonts.googleapis.com/icon?family=Material+Icons);
 
 
+/*-----------------------------------------------------------------------------
+* Common
+-----------------------------------------------------------------------------*/
 * {
   padding: 0;
   margin: 0;
   font-family: "Helvetica Neue", "Helvetica", "Arial";
   font-weight: normal;
-  font-size: 1.0rem;
-  letter-spacing: 0.04rem;
+  font-size: 1.0em;
+  letter-spacing: 0.04em;
   color: #666;
   position: relative;
   box-sizing: border-box;
@@ -42,310 +45,319 @@ body {
     }
   }
 
-  #container {
-    margin: 0 auto;
-    width: 100%;
-    max-width: 960px;
-    padding: 0 24px;
-    
-    #icons-block {
-      width: 100%;
-      height: 36px;
-      margin-top: 24px;
-      
-      i {
-        display: block;
-        position: absolute;
-        top: 0;
-        left: 0;
-        border-radius: 24px;
-        z-index: 10;
+  .center {
+    text-align: center;
+  }
+}
 
-        &:hover {
-          cursor: pointer;
-          opacity: 0.7;
+#container {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 960px;
+  padding: 0 24px 72px 24px;
+}
+
+
+/*-----------------------------------------------------------------------------
+* Blocks
+-----------------------------------------------------------------------------*/
+#icons-block {
+  width: 100%;
+  height: 36px;
+  line-height: 28px;
+  margin-top: 24px;
+  
+  i {
+    &:hover {
+      cursor: pointer;
+      opacity: 0.7;
+    }
+  }
+  
+  a {
+    color: #369;
+    text-decoration: none;
+  }
+
+  #icons-left {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 36px;
+    line-height: 36px;
+    vertical-align: middle;
+
+    a {
+      height: 36px;
+      line-height: 36px;
+      vertical-align: middle;
+    }
+
+  }
+
+  #icons-right {
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: flex;
+    flex-wrap: wrap;
+
+    .text-menu {
+      width: fit-content;
+      text-align: center;
+    }
+
+    .separator {
+      width: 40px;
+      color: #ccc;
+      text-align: center;
+    }
+  }
+}
+
+#title-block {
+  margin-top: 16px;
+  margin-bottom: 48px;
+  text-align: center;
+
+  h1 {
+    margin-top: 12px;
+    font-size: 2.0em;
+    letter-spacing: 0.04em;
+    color: #333;
+  }
+    
+  h3 {
+    margin-top: 8px;
+    font-size: 1.0em;
+    color: #999;
+  }
+}
+
+#works-block {
+
+  h3 {
+    font-size: 1.0em;
+    margin-bottom: 16px;
+    color: #999;
+  }
+
+  .works {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -20px;
+
+    .work {
+      margin: 0 auto;
+      margin-bottom: 32px;
+      width: calc(84%);
+      border-radius: 2px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+      background-color: #fefefe;
+  
+      .image {
+        width: 100%;
+        height: 180px;
+        border-top-left-radius: 2px;
+        border-top-right-radius: 2px;
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+
+        .ribbon {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 64px;
+          height: 64px;
+          overflow: hidden;
+
+          span {
+            display: inline-block;
+            position: absolute;
+            padding: 4px 0 4px 4px;
+            top: 20px;
+            right: -24px;
+            height: 24px;
+            width: 160px;
+            text-align: center;
+            font-size: 18px;
+            line-height: 16px;
+            background: #cf5353;
+            color: #fff;
+            letter-spacing: 0.05em;
+            -webkit-transform: rotate(-45deg);
+            -ms-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+            box-shadow: 0 0 0 2px #cf5353;
+            border-top: solid 1px rgba(255, 255, 255, 0.4);
+            border-bottom: solid 1px rgba(255, 255, 255, 0.4);
+          }
         }
+      }
+      
+      .title {
+        padding: 8px;
+        font-size: 0.9em;
+        line-height: 1.2em;
       }
       
       a {
         position: absolute;
-        display: block;
         width: 100%;
         height: 100%;
-        top: 0;
-        left: 0;
-      }
-
-      #icon-menu {
-        right: 0;
-        left: auto;
-      }
-    }
-
-    #title-block {
-      margin-top: 16px;
-      margin-bottom: 48px;
-      text-align: center;
-
-      h1 {
-        margin-top: 12px;
-        font-size: 2.0rem;
-        letter-spacing: 0.08rem;
-        color: #333;
-      }
-        
-      h3 {
-        margin-top: 4px;
-        font-size: 0.9rem;
-        color: #999;
-      }
-    }
-
-    #menu {
-      #menu-cover {
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        background-color: rgba(0,0,0,0.7);
-        opacity: 0;
-        z-index: -1;
-      }
-
-      #menu-content {
-        $width: 200px;
-        position: fixed;
-        width: $width - 10px;
-        height: 100%;
-        top: 0;
-        right: -1 * $width;
-        background-color: #fefefe;
-        z-index: 100;
-        box-shadow: 0 4px 6px rgba(0,0,0,0.4);
-        
-        .item {
-          width: 100%;
-          height: 54px;
-          line-height: 54px;
-          border-bottom: 1px solid #eee;
-          font-size: 1rem;
-          text-align: left;
-          
-          a {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            text-decoration: none;
-            padding-left: 16px;
-            
-            &:hover {
-              opacity: 0.7;
-            }
-          }
-        }
-
-        .item:first-child {
-          height: 72px;
-          
-          #icon-close {
-            right: 24px;
-            left: auto;
-            top: 24px;
-          }
-        }
-      }
-      
-      &.show {
-        #menu-cover {
-          opacity: 1;
-          z-index: 90;
-        }
-        
-        #menu-content {
-          right: 0;
-        }
-      }
-    }
-
-    #works-block {
-      display: flex;
-      flex-wrap: wrap;
-      
-      .work {
-        margin: 0 auto;
-        margin-bottom: 24px;
-        width: calc(100% - 80px);
-        border-radius: 2px;
-        box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-        background-color: #fefefe;
-
-        .image {
-          width: 100%;
-          height: 180px;
-          border-top-left-radius: 2px;
-          border-top-right-radius: 2px;
-          background-position: center center;
-          background-repeat: no-repeat;
-          background-size: cover;
-        }
-        
-        .title {
-          padding: 8px;
-          font-size: 0.9rem;
-          line-height: 1.2rem;
-        }
-        
-        a {
-          position: absolute;
-          width: 100%;
-          height: 100%;
-        }
-      }
-    }
-
-    #about-block {
-      max-width: 600px;
-      margin: 0 auto;
-
-      section {
-        margin-bottom: 36px;
-        
-        .gray {
-          color: #999;
-        }
-        
-        .strong {
-          font-weight: 400;
-          color: #432;
-        }
-        
-        .subsection {
-          margin-bottom: 16px;
-          
-          p,h4 {
-            margin-bottom: 4px;
-          }
-        }
-        
-        h2 {
-          color: #333;
-          font-size: 1.4rem;
-          margin-bottom: 4px;
-        }
-        
-        h5 {
-          color: #999;
-          margin-bottom: 16px;
-        }
-        
-        h3 {
-          color: #333;
-          font-size: 1.2rem;
-          line-height: 1.4rem;
-          border-left: 4px solid #b43;
-          padding-left: 8px;
-          margin-bottom: 12px;
-        }
       }
     }
   }
+}
 
+#about-block {
+  max-width: 600px;
+  margin: 0 auto;
+
+  section {
+    margin-bottom: 36px;
+    
+    .gray {
+      color: #999;
+    }
+    
+    .strong {
+      font-weight: 400;
+      color: #432;
+    }
+    
+    .subsection {
+      margin-bottom: 16px;
+      
+      p,h4 {
+        margin-bottom: 4px;
+      }
+
+      span.delimiter {
+        padding: 0 12px;
+        color: #ccc;
+      }
+    }
+    
+    h2 {
+      color: #333;
+      font-size: 1.4em;
+      margin-bottom: 4px;
+    }
+    
+    h5 {
+      color: #999;
+      margin-bottom: 16px;
+    }
+    
+    h3 {
+      color: #333;
+      font-size: 1.2em;
+      line-height: 1.4em;
+      border-left: 4px solid #b43;
+      padding-left: 8px;
+      margin-bottom: 12px;
+    }
+  }
+}
+
+
+/*-----------------------------------------------------------------------------
+* Pages
+-----------------------------------------------------------------------------*/
+#pjax-content {
   &.work-description {
-    #container {
-      #title-block {
-        text-align: left;
-        
-        .date {
-          color: #999;
-          font-size: 0.8rem;
-        }
-        
-        h1 {
-          font-size: 1.6rem;
-        }
+    #title-block {
+      text-align: left;
+      
+      .date {
+        color: #999;
+        font-size: 0.9em;
       }
       
-      #eyecatch-block {
-        overflow-x: hidden;
-        margin-left: calc(((100vw - 100%) / 2) * -1);
-        width: 100vw;
-
-        #eyecatch {
-          margin-left: -15%;
-          width: 130%;
-        }
+      h1 {
+        font-size: 1.6em;
       }
+    }
+    
+    #eyecatch-block {
+      overflow-x: hidden;
+      margin-left: calc(((100vw - 100%) / 2) * -1);
+      width: 100vw;
 
-      #article-block {
-        margin-top: 24px;
+      #eyecatch {
+        margin-left: -15%;
+        width: 130%;
+      }
+    }
+
+    #article-block {
+      margin-top: 24px;
+      
+      p {
+        font-family: 'PT Serif', 'Georgia', serif;
+        line-height: 1.6em;
+        margin-bottom: 16px;
         
-        p {
+        a {
           font-family: 'PT Serif', 'Georgia', serif;
-          line-height: 1.6rem;
-          margin-bottom: 16px;
-          
-          a {
-            font-family: 'PT Serif', 'Georgia', serif;
-          }
-          
-          a.button {
-            font-family: "Helvetica Neue", "Helvetica";
-            margin-top: 24px;
-            margin-bottom: 36px;
-          }
+        }
+        
+        a.button {
+          font-family: "Helvetica Neue", "Helvetica";
+          margin-top: 24px;
+          margin-bottom: 36px;
+        }
 
-          img {
-            width: 100%;
-          }
-          
-          &.disclaimer {
-            text-align: center;
-            font-size: 0.8rem;
-            color: #933;
-            margin-top: -12px;
-          }
+        img {
+          width: 100%;
+        }
+        
+        &.disclaimer {
+          text-align: center;
+          font-size: 0.8em;
+          color: #933;
+          margin-top: -12px;
         }
       }
     }
   }
 
   &.home {
-    #container {
-      div.button-block {
-        margin-top: 16px;
-        margin-bottom: 48px;
-      }
+    div.button-block {
+      margin-top: 16px;
+      margin-bottom: 48px;
     }
   }
 }
+  
 
-
-/* Tablet */
+/*-----------------------------------------------------------------------------
+* Responsive
+-----------------------------------------------------------------------------*/
+// Tablet
 @media screen and (min-width: 600px) {
-  body {
-    #container {
-      #works-block {
-        .work {
-          width: calc((100% / 2) - 40px);
-          
-          .title {
-            font-size: 1rem;
-          }
+  #works-block {
+    .works {
+
+      .work {
+        margin: 0 20px 32px 20px;
+        width: calc((100% / 2) - 40px);
+        
+        .title {
+          font-size: 1em;
         }
       }
     }
   }
 
-  body.work-description {
-    #container {
-      max-width: 800px;
+  #pjax-content {
+    &.work-description {
       
       #title-block {
         h1 {
-          font-size: 1.6rem;
+          font-size: 1.6em;
           font-weight: normal;
         }
       }
@@ -360,27 +372,26 @@ body {
   }
 }
 
-/* PC */
+// PC
 @media screen and (min-width: 900px) {
-  body {
-    #container {
-      #works-block {
-        .work {
-          width: calc((100% / 3) - 20px);
-          
-          .title {
-            font-size: 0.9rem;
-          }
+  #works-block {
+    .works {
+      .work {
+        margin: 0 10px 32px 10px;
+        width: calc((100% / 3) - 20px);
+        
+        .title {
+          font-size: 0.9em;
         }
       }
     }
   }
 
-  body.work-description {
-    #container {
+  #pjax-content {
+    &.work-description {
       #title-block {
         h1 {
-          font-size: 2.0rem;
+          font-size: 2.0em;
           font-weight: normal;
         }
       }
