--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,31 @@ body {
       opacity: 0.8; }
   body .center {
     text-align: center; }
+  body .moving {
+    opacity: 0;
+    margin-top: -24px; }
+
+#cover {
+  position: fixed;
+  z-index: 1000;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: white;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.8);
+  vertical-align: middle;
+  line-height: 100%;
+  transition: all 0s; }
+  #cover p {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: rgba(0, 0, 0, 0.8);
+    font-family: Helvetica;
+    font-size: small; }
 
 #container {
   margin: 0 auto;
@@ -190,40 +215,40 @@ body {
 /*-----------------------------------------------------------------------------
 * Pages
 -----------------------------------------------------------------------------*/
-#pjax-content.work-description #title-block {
+#page-content.work-description #title-block {
   text-align: left; }
-  #pjax-content.work-description #title-block .date {
+  #page-content.work-description #title-block .date {
     color: #999;
     font-size: 0.9em; }
-  #pjax-content.work-description #title-block h1 {
+  #page-content.work-description #title-block h1 {
     font-size: 1.6em; }
-#pjax-content.work-description #eyecatch-block {
+#page-content.work-description #eyecatch-block {
   overflow-x: hidden;
   margin-left: calc(((100vw - 100%) / 2) * -1);
   width: 100vw; }
-  #pjax-content.work-description #eyecatch-block #eyecatch {
+  #page-content.work-description #eyecatch-block #eyecatch {
     margin-left: -15%;
     width: 130%; }
-#pjax-content.work-description #article-block {
+#page-content.work-description #article-block {
   margin-top: 24px; }
-  #pjax-content.work-description #article-block p {
+  #page-content.work-description #article-block p {
     font-family: 'PT Serif', 'Georgia', serif;
     line-height: 1.6em;
     margin-bottom: 16px; }
-    #pjax-content.work-description #article-block p a {
+    #page-content.work-description #article-block p a {
       font-family: 'PT Serif', 'Georgia', serif; }
-    #pjax-content.work-description #article-block p a.button {
+    #page-content.work-description #article-block p a.button {
       font-family: "Helvetica Neue", "Helvetica";
       margin-top: 24px;
       margin-bottom: 36px; }
-    #pjax-content.work-description #article-block p img {
+    #page-content.work-description #article-block p img {
       width: 100%; }
-    #pjax-content.work-description #article-block p.disclaimer {
+    #page-content.work-description #article-block p.disclaimer {
       text-align: center;
       font-size: 0.8em;
       color: #933;
       margin-top: -12px; }
-#pjax-content.home div.button-block {
+#page-content.home div.button-block {
   margin-top: 16px;
   margin-bottom: 48px; }
 
@@ -237,10 +262,10 @@ body {
     #works-block .works .work .title {
       font-size: 1em; }
 
-  #pjax-content.work-description #title-block h1 {
+  #page-content.work-description #title-block h1 {
     font-size: 1.6em;
     font-weight: normal; }
-  #pjax-content.work-description #eyecatch-block #eyecatch {
+  #page-content.work-description #eyecatch-block #eyecatch {
     margin-left: 0;
     width: 100%; } }
 @media screen and (min-width: 900px) {
@@ -250,10 +275,10 @@ body {
     #works-block .works .work .title {
       font-size: 0.9em; }
 
-  #pjax-content.work-description #title-block h1 {
+  #page-content.work-description #title-block h1 {
     font-size: 2.0em;
     font-weight: normal; }
-  #pjax-content.work-description #eyecatch-block {
+  #page-content.work-description #eyecatch-block {
     margin-left: 0;
     width: 100%; } }
 
