--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -48,6 +48,36 @@ body {
   .center {
     text-align: center;
   }
+
+  .moving {
+    opacity: 0;
+    margin-top: -24px;
+  }
+}
+
+#cover {
+  position: fixed;
+  z-index: 1000;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(255,255,255, 1);
+  text-align: center;
+  color: rgba(0,0,0,0.8);
+  vertical-align: middle;
+  line-height: 100%;
+  transition: all 0s;
+
+  p {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: rgba(0,0,0,0.8);
+    font-family: Helvetica;
+    font-size: small;
+  }
 }
 
 #container {
@@ -266,7 +296,7 @@ body {
 /*-----------------------------------------------------------------------------
 * Pages
 -----------------------------------------------------------------------------*/
-#pjax-content {
+#page-content {
   &.work-description {
     #title-block {
       text-align: left;
@@ -340,7 +370,6 @@ body {
 @media screen and (min-width: 600px) {
   #works-block {
     .works {
-
       .work {
         margin: 0 20px 32px 20px;
         width: calc((100% / 2) - 40px);
@@ -352,7 +381,7 @@ body {
     }
   }
 
-  #pjax-content {
+  #page-content {
     &.work-description {
       
       #title-block {
@@ -387,7 +416,7 @@ body {
     }
   }
 
-  #pjax-content {
+  #page-content {
     &.work-description {
       #title-block {
         h1 {
