--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -162,6 +162,12 @@ body {
     font-size: 1.0em;
     color: #999;
   }
+
+  p.introduction {
+    text-align: left;
+    line-height: 1.8em;
+    margin-top: 36px;
+  }
 }
 
 #works-block {
@@ -426,8 +432,6 @@ body {
     }
   }
 }
-
-
 
 
 
