--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -306,7 +306,7 @@ body {
 /*-----------------------------------------------------------------------------
 * Pages
 -----------------------------------------------------------------------------*/
-#page-content {
+#pjax-content {
   &.work-description {
     #title-block {
       text-align: left;
@@ -391,7 +391,7 @@ body {
     }
   }
 
-  #page-content {
+  #pjax-content {
     &.work-description {
 
       #title-block {
@@ -426,7 +426,7 @@ body {
     }
   }
 
-  #page-content {
+  #pjax-content {
     &.work-description {
       #title-block {
         h1 {
