--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,9 +177,16 @@ body {
           border-top: solid 1px rgba(255, 255, 255, 0.4);
           border-bottom: solid 1px rgba(255, 255, 255, 0.4); }
     #works-block .works .work .title {
-      padding: 8px;
-      font-size: 0.9em;
-      line-height: 1.2em; }
+      padding: 16px;
+      font-size: 1.1em;
+      font-weight: 500;
+      color: #333;
+      line-height: 1.2em;
+      height: 64px; }
+    #works-block .works .work .date {
+      padding: 0 16px 16px 16px;
+      font-size: .9em;
+      color: #aaa; }
     #works-block .works .work a {
       position: absolute;
       width: 100%;
