--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -237,9 +237,18 @@ body {
       }
 
       .title {
-        padding: 8px;
-        font-size: 0.9em;
+        padding: 16px;
+        font-size: 1.1em;
+        font-weight: 500;
+        color: #333;
         line-height: 1.2em;
+        height: 64px;
+      }
+
+      .date {
+        padding: 0 16px 16px 16px;
+        font-size: .9em;
+        color: #aaa;
       }
 
       a {
