--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,24 +1,17 @@
 @charset "UTF-8";
-/*
 @font-face {
   font-family: 'Noto Sans Japanese';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(//fonts.gstatic.com/ea/notosansjapanese/v6/NotoSansJP-Regular.woff2) format('woff2'),
-       url(//fonts.gstatic.com/ea/notosansjapanese/v6/NotoSansJP-Regular.woff) format('woff'),
-       url(//fonts.gstatic.com/ea/notosansjapanese/v6/NotoSansJP-Regular.otf) format('opentype');
-}
-
+  src: url(//fonts.gstatic.com/ea/notosansjapanese/v6/NotoSansJP-Regular.woff2) format("woff2"), url(//fonts.gstatic.com/ea/notosansjapanese/v6/NotoSansJP-Regular.woff) format("woff"), url(//fonts.gstatic.com/ea/notosansjapanese/v6/NotoSansJP-Regular.otf) format("opentype"); }
 @font-face {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v18/KFOmCnqEu92Fr1Mu4mxKKTU1Kg.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-*/
+  src: local("Roboto"), local("Roboto-Regular"), url(https://fonts.gstatic.com/s/roboto/v18/KFOmCnqEu92Fr1Mu4mxKKTU1Kg.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD; }
 /*-----------------------------------------------------------------------------
 * Common
 -----------------------------------------------------------------------------*/
@@ -107,26 +100,14 @@ a.button {
 #header-block {
   height: 36px;
   line-height: 28px;
-  margin-top: 24px;
-  margin-right: 16px; }
+  margin-top: 24px; }
   #header-block i:hover {
     cursor: pointer;
     opacity: 0.7; }
-  #header-block #icons-left {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 36px;
-    line-height: 36px;
-    vertical-align: middle; }
-    #header-block #icons-left a {
-      height: 36px;
-      line-height: 36px;
-      vertical-align: middle; }
   #header-block #icons-right {
     position: absolute;
     top: 0;
-    right: 0;
+    right: 32px;
     display: flex;
     flex-wrap: wrap; }
     #header-block #icons-right .text-menu {
@@ -265,9 +246,10 @@ a.button {
   #pjax-content[page=work-description] #title-block {
     text-align: left; }
     #pjax-content[page=work-description] #title-block .date {
-      color: #999;
-      font-size: 14px; }
+      color: #963;
+      font-size: 16px; }
     #pjax-content[page=work-description] #title-block h1 {
+      font-weight: bold;
       font-size: 20px; }
       @media screen and (min-width: 540px) {
         #pjax-content[page=work-description] #title-block h1 {
@@ -275,6 +257,9 @@ a.button {
       @media screen and (min-width: 900px) {
         #pjax-content[page=work-description] #title-block h1 {
           font-size: 24px; } }
+    #pjax-content[page=work-description] #title-block h3 {
+      color: #666;
+      font-size: 16px; }
   #pjax-content[page=work-description] #eyecatch-block {
     overflow-x: hidden;
     margin-left: calc(((100vw - 100%) / 2) * -1);
@@ -297,6 +282,7 @@ a.button {
       margin-bottom: 16px; }
       #pjax-content[page=work-description] #article-block p a {
         font-family: inherit;
+        font-size: inherit;
         text-decoration: none;
         color: #369; }
       #pjax-content[page=work-description] #article-block p img {
