--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -276,6 +276,11 @@ a.button {
           }
         }
 
+        .title-en {
+          margin-top: 8px;
+          line-height: 24px;
+        }
+
         .date {
           font-size: 14px;
           color: #999;
