--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,8 +159,7 @@ a.button {
     @media screen and (min-width: 540px) {
       #pjax-content[page=home] #works-block .work {
         margin: 0 20px 32px 20px;
-        width: calc((100% / 2) - 40px);
-        width: 100%; } }
+        width: calc((100% / 2) - 40px); } }
     @media screen and (min-width: 900px) {
       #pjax-content[page=home] #works-block .work {
         margin: 0 10px 32px 10px;
@@ -183,8 +182,14 @@ a.button {
         width: 100%;
         height: 100%;
         background: center center / cover no-repeat #eee; }
+        @media screen and (min-width: 540px) {
+          #pjax-content[page=home] #works-block .work a div {
+            border-radius: 4px; } }
     #pjax-content[page=home] #works-block .work .info {
       padding: 8px 16px 16px 16px; }
+      @media screen and (min-width: 540px) {
+        #pjax-content[page=home] #works-block .work .info {
+          padding: 8px 1px; } }
       #pjax-content[page=home] #works-block .work .info .title-jp {
         font-size: 16px;
         font-weight: bold;
