Fix link decoration in Publicity

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,11 +36,21 @@ body {
 
 .jp {
   text-align: justify; }
+  .jp a {
+    font-family: inherit;
+    font-size: inherit;
+    color: #369;
+    text-decoration: none; }
 
 .en {
   font-family: "PT Serif";
   font-size: 17px;
   text-align: left; }
+  .en a {
+    font-family: inherit;
+    font-size: inherit;
+    color: #369;
+    text-decoration: none; }
 
 a.button {
   display: block;
